--- a/google-maps-api-sheets/index.html
+++ b/google-maps-api-sheets/index.html
@@ -3,12 +3,12 @@
   <head lang="en">
     <meta charset="UTF-8">
     <title>Google Maps</title>
-    <link rel="stylesheet" href="map.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="map"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key={{API_KEY}}&callback=initialiseMap"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="map.js"></script>
+    <script type='text/javascript' src='config.js'></script>
+    <script type='text/javascript' src="index.js"></script>
   </body>
 </html>
